# wiggleRNG

./: Miscellaneous.ipynb  PCA.ipynb  QRNG data visualization.ipynb  QRNG_brisbane.txt  QRNG_ibm_brisbane.txt  README.md  chisquared.ipynb  entropy and estimated values.ipynb  main.ipynb  pyproject.toml  quantum machine parameters.ipynb  sherbrook.txt  sorted_decimal_numbers.txt  step_1.ipynb  step_2.ipynb  step_4.ipynb
200_model/: best_model_epoch0.pth  best_model_epoch130.pth  best_model_epoch190.pth  best_model_epoch20_200bits.pth  best_model_epoch35.pth
Data Files/: ibm_brisbane_calibrations_2024-10-11T13_37_10Z.csv
Model_data/200bit_model/: best_model_epoch10.pth  best_model_epoch15.pth  best_model_epoch25.pth  (+6 more)
data/: QRNG_ibm_kyiv.txt  QRNG_ibm_sherbrooke.txt  kyiv.txt  sorted_decimal_numbers.txt
model/: best_model_epoch0.pth  best_model_epoch10.pth  best_model_epoch100.pth  best_model_epoch110.pth  best_model_epoch120.pth  best_model_epoch125.pth  best_model_epoch140.pth  best_model_epoch15.pth  best_model_epoch180.pth  best_model_epoch20.pth  best_model_epoch25.pth  best_model_epoch35.pth  best_model_epoch5.pth  best_model_epoch50.pth  best_model_epoch55.pth  best_model_epoch60.pth  best_model_epoch80.pth
model_100/: best_model_epoch15.pth  best_model_epoch160.pth  best_model_epoch25.pth  best_model_epoch30.pth  best_model_epoch65.pth  best_model_epoch70.pth  best_model_epoch90.pth
model_400/: best_model_epoch130.pth  best_model_epoch145_abso.pth  best_model_epoch15.pth  best_model_epoch30.pth  best_model_epoch35.pth  best_model_epoch50.pth
(+24 files in other folders)
